src/routes/WelcomePage/WelcomeNavBar.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Protest+Guerrilla&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "Protest Guerrilla", sans-serif;
}

:root {
    --mainColor: #FFF;
    --mainColorLight: #5767aa;
    --secondaryColor: #DB2B39;
    --textColor: #000;
}

.welcome-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem;
    background-color: var(--mainColor);
    color: var(--textColor);
}

nav a {
    margin: 0 2rem;
    color: var(--textColor);
    text-decoration: none;
}

nav a:hover {
    color: var(--secondaryColor);
}

.welcome-header .nav-btn {
    padding: 5px;
    cursor: pointer;
    background: transparent;
    border: none;
    outline: none;
    color: var(--textColor);
    visibility: hidden;
    opacity: 0;
    font-size: 1.8rem;
}

.logo {
    display: flex;
    flex-direction: column;
}


.logo img {
    width: 2rem;
    align-self: center;
}

.logo h2 {
    font-size: 1rem;
}

.sign {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.sign-btn {
    border-width: 3px;
    border-color: #000;
    background-color: #FFF;
    font-weight: 800;
    border: 2px solid black;
    padding: 0.2rem;
}

@media only screen and (max-width: 769px) {
    .welcome-header .nav-btn {
        visibility: visible;
        opacity: 1;
    }

    .welcome-header nav {
        position: fixed;
        top: 0;
        left: 0;
        height: 100%;
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 1.5rem;
        background-color: var(--mainColor);
        transition: 1s;
        transform: translateY(-100vh);
    }

    .welcome-header .responsive_nav {
        transform: none;
    }

    nav .nav-close-btn {
        position: absolute;
        top: 2rem;
        right: 2rem;
    }

    nav a {
        font-size: 1.5rem;
    }

    .sign {
        display: none;
    }
}

